# inbox-creeper

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/inbox_creeper/: __init__.py  gmail_client.py  server.py
